[project]
name = "content-moderation"
version = "0.1.0"
packages = [{include = "content_moderation"}] 
description = "Content moderation service"
authors = [
    {name = "Keshav Singh",email = "keshavimperial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "openai (>=1.61.1,<2.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "limits (>=4.0.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

